MDEV-3868 : windows client compilation issues

Avoid inclusion of Windows headers via client API headers, since it traditionally
lead to different  subtle compilation problems. Instead define my_socket in a way that is compatible with SOCKET (unsigned int in 32 bit , unsigned longlong in 64 bit)